fixed input not displaying on mobile

--- a/src/Bubbles/ui/Members.css
+++ b/src/Bubbles/ui/Members.css
@@ -5,3 +5,18 @@
 .card{
     margin-bottom: 20px;
 }
+
+.bubble-status-green{
+    font-size: 16px;
+    color: green
+}
+
+.bubble-status-yellow{
+    font-size: 16px;
+    color: yellow
+}
+
+.bubble-status-red{
+    font-size: 16px;
+    color: red
+}
